--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,13 +4,14 @@ header {
   z-index: 10;
   display: flex;
   justify-content: space-between;
+  background-color: #3f51b5;
+  color: #fff;
   box-shadow: 0px 2px 10px -1px rgba(0, 0, 0, 0.2);
 
   .left {
     display: flex;
     justify-content: flex-start;
     .taxi {
-      // color: gray;
       font-size: 3rem;
     }
 
@@ -23,7 +24,6 @@ header {
   }
 
   .user {
-    // color: gray;
     font-size: 3rem;
     align-self: flex-end;
   }
