--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -14,19 +14,19 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding: 1.5rem;
 
     .upper {
       width: 100%;
-      min-width: 300px;
-      max-width: 400px;
-      padding: 1rem 1.5rem 1.5rem;
       border: 1px solid gray;
-    }
-
-    button {
-      padding: 10px;
-      margin: 0.75rem 0;
-      width: 120px;
+      padding: 0 1.5rem;
+      max-width: 400px;
+      border-radius: 4px;
+      .submit {
+        padding: 10px;
+        margin: 0.75rem 0;
+        width: 120px;
+      }
     }
 
     .lower {
@@ -34,21 +34,22 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      align-items: center;
 
-      .submit {
+      .text {
+        margin-top: 10px;
+        font-size: 14px;
+      }
+
+      .link {
         cursor: pointer;
+        margin-top: 10px;
         min-width: 150px;
         border: none;
         color: #3f51b1;
         font-weight: 500;
-        border-radius: 4px;
-        font-size: 1rem;
+        font-size: 15px;
         background-color: #fff;
-      }
-
-      .text {
-        margin-top: 0.75rem;
-        padding: 10px;
       }
     }
   }
