--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
 }
 * {
   box-sizing: border-box;
@@ -26,6 +27,7 @@ h4,
 h5,
 h6,
 figure,
+button,
 p {
   margin: 0;
   padding: 0;
@@ -36,6 +38,10 @@ p {
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+
+button {
+  font-size: 16px;
 }
 
 button:focus,
